:bug: fixed z-index for menu

--- a/src/style/_first-page.scss
+++ b/src/style/_first-page.scss
@@ -26,6 +26,7 @@
     width: 100vw;
     display: flex;
     background-color: rgba(0, 0, 0, .5 );
+    z-index: 3;
 }
 
 .nav {
