--- a/src/style/_header.scss
+++ b/src/style/_header.scss
@@ -43,7 +43,7 @@
   background-color: transparent;
   border: none;
   cursor: pointer;
-  z-index: 2;
+  z-index: 4;
 }
 
 .doner-menu-img {
